# aether-frame

./: .env.example  .env.example.custom  .gitignore  .mcp.json  CHANGELOG.md  Makefile  README.md  ai_rnd_agile_optimization_plan_cn.md  dev.py  feat_stream_mode.md  interface_design_proposal.md  observability_enhancement_plan.md  pyproject.toml  run_controller_server.py  sa.md  set-proxy.ps1  test_chat_log_direct.py  test_end_to_end.py  tools.py
archive/: tmp.md  tmp2.md
cc_tools/: git_push_plan.py
docs/: adk_available_knowledge_plan.md  adk_ephemeral_file_handling.md  adk_lifecycle_review.md  adk_multimodal_implementation.md  adk_performance_testing_summary.md  adk_session_lifecycle_strategy.md  adk_session_management_plan.md  agent_prelaunch_capacity.md  agent_system.md  agents.md  api_usage_examples.md  api_usage_guide.md  architecture.md  artifact_store_taxonomy.md  azure_stream_mode_optimization.md  b2b_agent_load_profile.md  bootstrap.md  code_ut.md  context_engineering.md  controller_api_reference.md  dev_plan.md  final_user_summary_prompt.md  flow.md  framework_abstraction.md  gitops.md  intent-recognition_design.md  intent-registry-bootstrap_design.md  intent-registry-bootstrap_sop.md  layout.md  observability_plan.md  performance.md  pydantic_streaming_optimization.md  python_coding_standard.md  session_manager_design.md  streaming_implementation.md  tool_integration_design.md
docs/plans/: 2026-03-19-intent-recognition-mvp.md  2026-04-02-context-prompt-integration.md  2026-04-02-instruction-layering-and-skill-boundaries.md  2026-04-02-playbook-runtime-context-layering.md  adk-skill-integration-design.md  planner-brief-and-step-guidelines.md
docs/research/: 2026-03-24-agent-session-memory-and-retrieval.md
docs/roadmaps/: agent_system_one_page.md  context_engineering_org.md  evaluation_pipeline_and_datasets.md  multi_agent_one_page.md  multi_agent_roadmap.md  overview.md  skills_tools_mcp_abstraction.md
requirements/: base.in  dev.in
reviews/: adk_idle_cleanup_review.md  memory_leak_review.md
scripts/: bootstrap_intent_registry.py  compile-requirements.sh  convert_prompt_agents_to_skills.py  perf_runner.py  test_api_key_manager.py
src/aether_frame/: __init__.py  bootstrap.py  main.py
tests/: DEBUGGER_GUIDE.md  conftest.py  interactive_tool_debugger.py  test_complete_tool_transmission.py  test_enhanced_debugger.py  test_optimized_tool_initialization.py  test_tool_transmission_to_adk.py
tests/controller/: test_http_requests.py
tests/debug/: README.md  debug_adk_execution.py  debug_deepseek_creation.py  final_streaming_analysis.py  run_tests.py  test_chat_history_demo.py  test_data_preservation.py  verify_test_method.py
tests/e2e/: ADK_SESSION_MIGRATION_TEST.md  test_adk_agent_reuse_e2e.py  test_adk_domain_agent_runtime_checks.py  test_adk_idle_cleanup_e2e.py  test_adk_parameter_flow.py  test_adk_runtime_checks.py  test_adk_session_history_migration.py  test_adk_session_recovery_e2e.py  test_agent_manager_runtime_checks.py  test_bootstrap.py  test_chat_history_migration.py  test_complete_aiassistant_flow.py  test_mcp_agent_creation_with_tools.py  test_mcp_real_server_e2e.py  test_real_validation.py  test_runner_manager_e2e.py  test_session_id_propagation_e2e.py  test_tool_service_runtime_checks.py
(+257 files in other folders)
